// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Given that search is clicked > should render the search page correctly > SupervisorSearchPageInitial 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-u-mt-l"
      >
        <div
          class="ons-field"
        >
          <label
            class="ons-label"
            for="caseid"
          >
            Enter case ID
          </label>
          <input
            class="ons-input ons-input--text ons-input-type__input"
            data-testid="caseid-input"
            id="caseid"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="ons-u-mt-s"
      >
        <button
          class="ons-btn ons-btn--disabled"
          disabled=""
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Search
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-u-mt-l"
    >
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="caseid"
        >
          Enter case ID
        </label>
        <input
          class="ons-input ons-input--text ons-input-type__input"
          data-testid="caseid-input"
          id="caseid"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="ons-u-mt-s"
    >
      <button
        class="ons-btn ons-btn--disabled"
        disabled=""
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Search
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given that search is clicked > should render the search page correctly > SupervisorSerachPage 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-u-mt-l"
      >
        <div
          class="ons-field"
        >
          <label
            class="ons-label"
            for="caseid"
          >
            Enter case ID
          </label>
          <input
            class="ons-input ons-input--text ons-input-type__input"
            data-testid="caseid-input"
            id="caseid"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="ons-u-mt-s"
      >
        <button
          class="ons-btn ons-btn--disabled"
          disabled=""
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Search
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-u-mt-l"
    >
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="caseid"
        >
          Enter case ID
        </label>
        <input
          class="ons-input ons-input--text ons-input-type__input"
          data-testid="caseid-input"
          id="caseid"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="ons-u-mt-s"
    >
      <button
        class="ons-btn ons-btn--disabled"
        disabled=""
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Search
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given that search is clicked > should render the search page correctly and Search button enabled after search text entered > SupervisorSerachPageSearchTextEntered 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-u-mt-l"
      >
        <div
          class="ons-field"
        >
          <label
            class="ons-label"
            for="caseid"
          >
            Enter case ID
          </label>
          <input
            class="ons-input ons-input--text ons-input-type__input"
            data-testid="caseid-input"
            id="caseid"
            type="text"
            value="900"
          />
        </div>
      </div>
      <div
        class="ons-u-mt-s"
      >
        <button
          class="ons-btn"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Search
            </span>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-u-mt-l"
    >
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="caseid"
        >
          Enter case ID
        </label>
        <input
          class="ons-input ons-input--text ons-input-type__input"
          data-testid="caseid-input"
          id="caseid"
          type="text"
          value="900"
        />
      </div>
    </div>
    <div
      class="ons-u-mt-s"
    >
      <button
        class="ons-btn"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Search
          </span>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given that search is clicked > should render the search page correctly when cases are searched for > SupervisorSerachPageSearchUSed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-u-mt-l"
      >
        <div
          class="ons-field"
        >
          <label
            class="ons-label"
            for="caseid"
          >
            Enter case ID
          </label>
          <input
            class="ons-input ons-input--text ons-input-type__input"
            data-testid="caseid-input"
            id="caseid"
            type="text"
            value="900"
          />
        </div>
      </div>
      <div
        class="ons-u-mt-s"
      >
        <button
          class="ons-btn"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Search
            </span>
          </span>
        </button>
      </div>
      <div
        class="ons-u-mb-l"
      >
        <div
          class="case-search-results"
          data-testid="case-search-results"
        >
          <div
            class="ons-table-scrollable ons-table-scrollable--on"
          >
            <div
              aria-label="Table"
              class="ons-table-scrollable__content"
              role="region"
              tabindex="0"
            >
              <table
                class="ons-table"
                data-testid="FRS2504A-Case-results-table"
                id="FRS2504A-Case-results"
              >
                <thead
                  class="ons-table__head"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Case ID
                      </span>
                    </th>
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Outcome
                      </span>
                    </th>
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Interviewer
                      </span>
                    </th>
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Organisation
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ons-table__body"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <td
                      aria-label="FRS2504A-CaseID"
                      class="ons-table__cell"
                    >
                      10001011
                    </td>
                    <td
                      aria-label="FRS2504A-Outcome"
                      class="ons-table__cell"
                    >
                      110
                    </td>
                    <td
                      aria-label="FRS2504A-Interviewer"
                      class="ons-table__cell"
                    >
                      rich
                    </td>
                    <td
                      aria-label="FRS2504A-Organisation"
                      class="ons-table__cell"
                    >
                      1
                    </td>
                    <td
                      aria-label="FRS2504A-Links"
                      class="ons-table__cell ons-u-ta-right"
                    >
                      <a
                        data-discover="true"
                        href="/questionnaires/FRS2504A/cases/10001011/editcase"
                      >
                        Edit case
                      </a>
                       | 
                      <a
                        class="ons-external-link"
                        href="https://cati.blaise.com/FRS2504A?KeyValue=10001011&DataEntrySettings=ReadOnly"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="ons-external-link__text"
                        >
                          View case
                        </span>
                        <span
                          class="ons-external-link__icon"
                        >
                           
                          <svg
                            aria-hidden="true"
                            class="ons-icon"
                            focusable="false"
                            role="img"
                            viewBox="0 0 12 12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                              transform="translate(-2 -1.99)"
                            />
                            <path
                              d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                              transform="translate(-2 -1.99)"
                            />
                          </svg>
                        </span>
                        <span
                          class="ons-external-link__new-window-description ons-u-vh"
                        >
                          (opens in a new tab)
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                  >
                    <td
                      aria-label="FRS2504A-CaseID"
                      class="ons-table__cell"
                    >
                      10001012
                    </td>
                    <td
                      aria-label="FRS2504A-Outcome"
                      class="ons-table__cell"
                    >
                      110
                    </td>
                    <td
                      aria-label="FRS2504A-Interviewer"
                      class="ons-table__cell"
                    />
                    <td
                      aria-label="FRS2504A-Organisation"
                      class="ons-table__cell"
                    >
                      1
                    </td>
                    <td
                      aria-label="FRS2504A-Links"
                      class="ons-table__cell ons-u-ta-right"
                    >
                      <a
                        data-discover="true"
                        href="/questionnaires/FRS2504A/cases/10001012/editcase"
                      >
                        Edit case
                      </a>
                       | 
                      <a
                        class="ons-external-link"
                        href="https://cati.blaise.com/FRS2504A?KeyValue=10001012&DataEntrySettings=ReadOnly"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="ons-external-link__text"
                        >
                          View case
                        </span>
                        <span
                          class="ons-external-link__icon"
                        >
                           
                          <svg
                            aria-hidden="true"
                            class="ons-icon"
                            focusable="false"
                            role="img"
                            viewBox="0 0 12 12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                              transform="translate(-2 -1.99)"
                            />
                            <path
                              d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                              transform="translate(-2 -1.99)"
                            />
                          </svg>
                        </span>
                        <span
                          class="ons-external-link__new-window-description ons-u-vh"
                        >
                          (opens in a new tab)
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                  >
                    <td
                      aria-label="FRS2504A-CaseID"
                      class="ons-table__cell"
                    >
                      10001013
                    </td>
                    <td
                      aria-label="FRS2504A-Outcome"
                      class="ons-table__cell"
                    >
                      210
                    </td>
                    <td
                      aria-label="FRS2504A-Interviewer"
                      class="ons-table__cell"
                    />
                    <td
                      aria-label="FRS2504A-Organisation"
                      class="ons-table__cell"
                    >
                      1
                    </td>
                    <td
                      aria-label="FRS2504A-Links"
                      class="ons-table__cell ons-u-ta-right"
                    >
                      <a
                        data-discover="true"
                        href="/questionnaires/FRS2504A/cases/10001013/editcase"
                      >
                        Edit case
                      </a>
                       | 
                      <a
                        class="ons-external-link"
                        href="https://cati.blaise.com/FRS2504A?KeyValue=10001013&DataEntrySettings=ReadOnly"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="ons-external-link__text"
                        >
                          View case
                        </span>
                        <span
                          class="ons-external-link__icon"
                        >
                           
                          <svg
                            aria-hidden="true"
                            class="ons-icon"
                            focusable="false"
                            role="img"
                            viewBox="0 0 12 12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                              transform="translate(-2 -1.99)"
                            />
                            <path
                              d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                              transform="translate(-2 -1.99)"
                            />
                          </svg>
                        </span>
                        <span
                          class="ons-external-link__new-window-description ons-u-vh"
                        >
                          (opens in a new tab)
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                  >
                    <td
                      aria-label="FRS2504A-CaseID"
                      class="ons-table__cell"
                    >
                      10001014
                    </td>
                    <td
                      aria-label="FRS2504A-Outcome"
                      class="ons-table__cell"
                    >
                      120
                    </td>
                    <td
                      aria-label="FRS2504A-Interviewer"
                      class="ons-table__cell"
                    />
                    <td
                      aria-label="FRS2504A-Organisation"
                      class="ons-table__cell"
                    >
                      1
                    </td>
                    <td
                      aria-label="FRS2504A-Links"
                      class="ons-table__cell ons-u-ta-right"
                    >
                      <a
                        data-discover="true"
                        href="/questionnaires/FRS2504A/cases/10001014/editcase"
                      >
                        Edit case
                      </a>
                       | 
                      <a
                        class="ons-external-link"
                        href="https://cati.blaise.com/FRS2504A?KeyValue=10001014&DataEntrySettings=ReadOnly"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="ons-external-link__text"
                        >
                          View case
                        </span>
                        <span
                          class="ons-external-link__icon"
                        >
                           
                          <svg
                            aria-hidden="true"
                            class="ons-icon"
                            focusable="false"
                            role="img"
                            viewBox="0 0 12 12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                              transform="translate(-2 -1.99)"
                            />
                            <path
                              d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                              transform="translate(-2 -1.99)"
                            />
                          </svg>
                        </span>
                        <span
                          class="ons-external-link__new-window-description ons-u-vh"
                        >
                          (opens in a new tab)
                        </span>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="ons-table__row"
                  >
                    <td
                      aria-label="FRS2504A-CaseID"
                      class="ons-table__cell"
                    >
                      10001015
                    </td>
                    <td
                      aria-label="FRS2504A-Outcome"
                      class="ons-table__cell"
                    >
                      110
                    </td>
                    <td
                      aria-label="FRS2504A-Interviewer"
                      class="ons-table__cell"
                    />
                    <td
                      aria-label="FRS2504A-Organisation"
                      class="ons-table__cell"
                    >
                      1
                    </td>
                    <td
                      aria-label="FRS2504A-Links"
                      class="ons-table__cell ons-u-ta-right"
                    >
                      <a
                        data-discover="true"
                        href="/questionnaires/FRS2504A/cases/10001015/editcase"
                      >
                        Edit case
                      </a>
                       | 
                      <a
                        class="ons-external-link"
                        href="https://cati.blaise.com/FRS2504A?KeyValue=10001015&DataEntrySettings=ReadOnly"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        <span
                          class="ons-external-link__text"
                        >
                          View case
                        </span>
                        <span
                          class="ons-external-link__icon"
                        >
                           
                          <svg
                            aria-hidden="true"
                            class="ons-icon"
                            focusable="false"
                            role="img"
                            viewBox="0 0 12 12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                              transform="translate(-2 -1.99)"
                            />
                            <path
                              d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                              transform="translate(-2 -1.99)"
                            />
                          </svg>
                        </span>
                        <span
                          class="ons-external-link__new-window-description ons-u-vh"
                        >
                          (opens in a new tab)
                        </span>
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-u-mt-l"
    >
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="caseid"
        >
          Enter case ID
        </label>
        <input
          class="ons-input ons-input--text ons-input-type__input"
          data-testid="caseid-input"
          id="caseid"
          type="text"
          value="900"
        />
      </div>
    </div>
    <div
      class="ons-u-mt-s"
    >
      <button
        class="ons-btn"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Search
          </span>
        </span>
      </button>
    </div>
    <div
      class="ons-u-mb-l"
    >
      <div
        class="case-search-results"
        data-testid="case-search-results"
      >
        <div
          class="ons-table-scrollable ons-table-scrollable--on"
        >
          <div
            aria-label="Table"
            class="ons-table-scrollable__content"
            role="region"
            tabindex="0"
          >
            <table
              class="ons-table"
              data-testid="FRS2504A-Case-results-table"
              id="FRS2504A-Case-results"
            >
              <thead
                class="ons-table__head"
              >
                <tr
                  class="ons-table__row"
                >
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Case ID
                    </span>
                  </th>
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Outcome
                    </span>
                  </th>
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Interviewer
                    </span>
                  </th>
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Organisation
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ons-table__body"
              >
                <tr
                  class="ons-table__row"
                >
                  <td
                    aria-label="FRS2504A-CaseID"
                    class="ons-table__cell"
                  >
                    10001011
                  </td>
                  <td
                    aria-label="FRS2504A-Outcome"
                    class="ons-table__cell"
                  >
                    110
                  </td>
                  <td
                    aria-label="FRS2504A-Interviewer"
                    class="ons-table__cell"
                  >
                    rich
                  </td>
                  <td
                    aria-label="FRS2504A-Organisation"
                    class="ons-table__cell"
                  >
                    1
                  </td>
                  <td
                    aria-label="FRS2504A-Links"
                    class="ons-table__cell ons-u-ta-right"
                  >
                    <a
                      data-discover="true"
                      href="/questionnaires/FRS2504A/cases/10001011/editcase"
                    >
                      Edit case
                    </a>
                     | 
                    <a
                      class="ons-external-link"
                      href="https://cati.blaise.com/FRS2504A?KeyValue=10001011&DataEntrySettings=ReadOnly"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="ons-external-link__text"
                      >
                        View case
                      </span>
                      <span
                        class="ons-external-link__icon"
                      >
                         
                        <svg
                          aria-hidden="true"
                          class="ons-icon"
                          focusable="false"
                          role="img"
                          viewBox="0 0 12 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                            transform="translate(-2 -1.99)"
                          />
                          <path
                            d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                            transform="translate(-2 -1.99)"
                          />
                        </svg>
                      </span>
                      <span
                        class="ons-external-link__new-window-description ons-u-vh"
                      >
                        (opens in a new tab)
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                >
                  <td
                    aria-label="FRS2504A-CaseID"
                    class="ons-table__cell"
                  >
                    10001012
                  </td>
                  <td
                    aria-label="FRS2504A-Outcome"
                    class="ons-table__cell"
                  >
                    110
                  </td>
                  <td
                    aria-label="FRS2504A-Interviewer"
                    class="ons-table__cell"
                  />
                  <td
                    aria-label="FRS2504A-Organisation"
                    class="ons-table__cell"
                  >
                    1
                  </td>
                  <td
                    aria-label="FRS2504A-Links"
                    class="ons-table__cell ons-u-ta-right"
                  >
                    <a
                      data-discover="true"
                      href="/questionnaires/FRS2504A/cases/10001012/editcase"
                    >
                      Edit case
                    </a>
                     | 
                    <a
                      class="ons-external-link"
                      href="https://cati.blaise.com/FRS2504A?KeyValue=10001012&DataEntrySettings=ReadOnly"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="ons-external-link__text"
                      >
                        View case
                      </span>
                      <span
                        class="ons-external-link__icon"
                      >
                         
                        <svg
                          aria-hidden="true"
                          class="ons-icon"
                          focusable="false"
                          role="img"
                          viewBox="0 0 12 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                            transform="translate(-2 -1.99)"
                          />
                          <path
                            d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                            transform="translate(-2 -1.99)"
                          />
                        </svg>
                      </span>
                      <span
                        class="ons-external-link__new-window-description ons-u-vh"
                      >
                        (opens in a new tab)
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                >
                  <td
                    aria-label="FRS2504A-CaseID"
                    class="ons-table__cell"
                  >
                    10001013
                  </td>
                  <td
                    aria-label="FRS2504A-Outcome"
                    class="ons-table__cell"
                  >
                    210
                  </td>
                  <td
                    aria-label="FRS2504A-Interviewer"
                    class="ons-table__cell"
                  />
                  <td
                    aria-label="FRS2504A-Organisation"
                    class="ons-table__cell"
                  >
                    1
                  </td>
                  <td
                    aria-label="FRS2504A-Links"
                    class="ons-table__cell ons-u-ta-right"
                  >
                    <a
                      data-discover="true"
                      href="/questionnaires/FRS2504A/cases/10001013/editcase"
                    >
                      Edit case
                    </a>
                     | 
                    <a
                      class="ons-external-link"
                      href="https://cati.blaise.com/FRS2504A?KeyValue=10001013&DataEntrySettings=ReadOnly"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="ons-external-link__text"
                      >
                        View case
                      </span>
                      <span
                        class="ons-external-link__icon"
                      >
                         
                        <svg
                          aria-hidden="true"
                          class="ons-icon"
                          focusable="false"
                          role="img"
                          viewBox="0 0 12 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                            transform="translate(-2 -1.99)"
                          />
                          <path
                            d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                            transform="translate(-2 -1.99)"
                          />
                        </svg>
                      </span>
                      <span
                        class="ons-external-link__new-window-description ons-u-vh"
                      >
                        (opens in a new tab)
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                >
                  <td
                    aria-label="FRS2504A-CaseID"
                    class="ons-table__cell"
                  >
                    10001014
                  </td>
                  <td
                    aria-label="FRS2504A-Outcome"
                    class="ons-table__cell"
                  >
                    120
                  </td>
                  <td
                    aria-label="FRS2504A-Interviewer"
                    class="ons-table__cell"
                  />
                  <td
                    aria-label="FRS2504A-Organisation"
                    class="ons-table__cell"
                  >
                    1
                  </td>
                  <td
                    aria-label="FRS2504A-Links"
                    class="ons-table__cell ons-u-ta-right"
                  >
                    <a
                      data-discover="true"
                      href="/questionnaires/FRS2504A/cases/10001014/editcase"
                    >
                      Edit case
                    </a>
                     | 
                    <a
                      class="ons-external-link"
                      href="https://cati.blaise.com/FRS2504A?KeyValue=10001014&DataEntrySettings=ReadOnly"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="ons-external-link__text"
                      >
                        View case
                      </span>
                      <span
                        class="ons-external-link__icon"
                      >
                         
                        <svg
                          aria-hidden="true"
                          class="ons-icon"
                          focusable="false"
                          role="img"
                          viewBox="0 0 12 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                            transform="translate(-2 -1.99)"
                          />
                          <path
                            d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                            transform="translate(-2 -1.99)"
                          />
                        </svg>
                      </span>
                      <span
                        class="ons-external-link__new-window-description ons-u-vh"
                      >
                        (opens in a new tab)
                      </span>
                    </a>
                  </td>
                </tr>
                <tr
                  class="ons-table__row"
                >
                  <td
                    aria-label="FRS2504A-CaseID"
                    class="ons-table__cell"
                  >
                    10001015
                  </td>
                  <td
                    aria-label="FRS2504A-Outcome"
                    class="ons-table__cell"
                  >
                    110
                  </td>
                  <td
                    aria-label="FRS2504A-Interviewer"
                    class="ons-table__cell"
                  />
                  <td
                    aria-label="FRS2504A-Organisation"
                    class="ons-table__cell"
                  >
                    1
                  </td>
                  <td
                    aria-label="FRS2504A-Links"
                    class="ons-table__cell ons-u-ta-right"
                  >
                    <a
                      data-discover="true"
                      href="/questionnaires/FRS2504A/cases/10001015/editcase"
                    >
                      Edit case
                    </a>
                     | 
                    <a
                      class="ons-external-link"
                      href="https://cati.blaise.com/FRS2504A?KeyValue=10001015&DataEntrySettings=ReadOnly"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <span
                        class="ons-external-link__text"
                      >
                        View case
                      </span>
                      <span
                        class="ons-external-link__icon"
                      >
                         
                        <svg
                          aria-hidden="true"
                          class="ons-icon"
                          focusable="false"
                          role="img"
                          viewBox="0 0 12 12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                            transform="translate(-2 -1.99)"
                          />
                          <path
                            d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                            transform="translate(-2 -1.99)"
                          />
                        </svg>
                      </span>
                      <span
                        class="ons-external-link__new-window-description ons-u-vh"
                      >
                        (opens in a new tab)
                      </span>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given that search is clicked > should render the search page correctly when cases are searched for > SupervisorSerachPageSearchUsed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-u-mt-l"
      >
        <div
          class="ons-field"
        >
          <label
            class="ons-label"
            for="caseid"
          >
            Enter case ID
          </label>
          <input
            class="ons-input ons-input--text ons-input-type__input"
            data-testid="caseid-input"
            id="caseid"
            type="text"
            value="900"
          />
        </div>
      </div>
      <div
        class="ons-u-mt-s"
      >
        <button
          class="ons-btn"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Search
            </span>
          </span>
        </button>
      </div>
      <div
        class="ons-u-mb-l"
      >
        <div
          class="case-search-results"
          data-testid="case-search-results"
        >
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_l_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                No results found for this case ID.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-u-mt-l"
    >
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="caseid"
        >
          Enter case ID
        </label>
        <input
          class="ons-input ons-input--text ons-input-type__input"
          data-testid="caseid-input"
          id="caseid"
          type="text"
          value="900"
        />
      </div>
    </div>
    <div
      class="ons-u-mt-s"
    >
      <button
        class="ons-btn"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Search
          </span>
        </span>
      </button>
    </div>
    <div
      class="ons-u-mb-l"
    >
      <div
        class="case-search-results"
        data-testid="case-search-results"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_l_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              No results found for this case ID.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are no surveys available in blaise > should render the page correctly when no surveys are returned > SupervisorPageNoSurveysReturned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
          id="panel-_r_q_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            There are no surveys available
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        id="panel-_r_q_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          There are no surveys available
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are surveys available in blaise > should render the supervisor page correctly when surveys are returned > SupervisorPageSurveysReturned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <br />
        <div
          data-testid="survey-accordion"
          id="survey"
        >
          <div
            class="ons-details ons-details--initialised ons-u-mt-l "
            data-save-state="true"
            id="survey-0"
            role="group"
          >
            <div
              aria-controls="survey-0-content"
              aria-expanded="false"
              class="ons-details__heading"
              data-ga-action="Open panel"
              data-testid="survey-0-heading"
              role="button"
              tabindex="0"
            >
              <h2
                class="ons-details__title ons-u-fs-r--b"
              >
                FRS
              </h2>
              <span
                class="ons-details__icon"
              >
                <svg
                  aria-hidden="true"
                  class="ons-icon"
                  fill="currentColor"
                  focusable="false"
                  role="img"
                  viewBox="0 0 8 13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ons-details__content"
              data-testid="survey-0-content"
              id="survey-0-content"
            >
              <div
                class="ons-field"
              >
                <label
                  class="ons-label"
                  for="select-questionnaire"
                >
                  Select questionnaire
                </label>
                <select
                  class="ons-input ons-input--select"
                  data-testid="select-questionnaire-input"
                  id="select-questionnaire"
                  name="select"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select an option
                  </option>
                  <option
                    data-testid="select-questionnaire-option-FRS2504A_EDIT"
                    value="FRS2504A_EDIT"
                  >
                    FRS2504A (April 2025)
                  </option>
                  <option
                    data-testid="select-questionnaire-option-FRS2505A_EDIT"
                    value="FRS2505A_EDIT"
                  >
                    FRS2505A (May 2025)
                  </option>
                </select>
              </div>
              <div
                class="questionnaire"
                data-testid="questionnaire"
              >
                <div
                  class="questionnaire"
                >
                  <div
                    data-testid="FRS2504A_EDIT-supervisor-Content"
                  >
                    <div
                      class="ons-summary ons-u-mt-m ons-u-mb-m"
                      data-testid="FRS2504A_EDIT-supervisor-summary-summary"
                      id="FRS2504A_EDIT-supervisor-summary"
                    >
                      <div
                        class="ons-summary__group"
                      >
                        <h2
                          class="ons-summary__group-title"
                        >
                          Case status
                        </h2>
                        <dl
                          class="ons-summary__items"
                          id="FRS2504A_EDIT-supervisor-summary-Case-status-list"
                        >
                          <div
                            class="ons-summary__item"
                            data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Total-cases-row"
                          >
                            <dt
                              class="ons-summary__item-title"
                            >
                              <div
                                class="ons-summary__item--text"
                              >
                                Total cases
                              </div>
                            </dt>
                            <dd
                              class="ons-summary__values"
                            >
                              <span
                                class="ons-summary__text"
                                data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Total-cases-value"
                              >
                                1000
                              </span>
                            </dd>
                          </div>
                          <div
                            class="ons-summary__item"
                            data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Unallocated-cases-row"
                          >
                            <dt
                              class="ons-summary__item-title"
                            >
                              <div
                                class="ons-summary__item--text"
                              >
                                Unallocated cases
                              </div>
                            </dt>
                            <dd
                              class="ons-summary__values"
                            >
                              <span
                                class="ons-summary__text"
                                data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Unallocated-cases-value"
                              >
                                966
                              </span>
                            </dd>
                          </div>
                          <div
                            class="ons-summary__item"
                            data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Allocated-cases-row"
                          >
                            <dt
                              class="ons-summary__item-title"
                            >
                              <div
                                class="ons-summary__item--text"
                              >
                                Allocated cases
                              </div>
                            </dt>
                            <dd
                              class="ons-summary__values"
                            >
                              <span
                                class="ons-summary__text"
                                data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Allocated-cases-value"
                              >
                                25
                              </span>
                            </dd>
                          </div>
                          <div
                            class="ons-summary__item"
                            data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Completed-cases-row"
                          >
                            <dt
                              class="ons-summary__item-title"
                            >
                              <div
                                class="ons-summary__item--text"
                              >
                                Completed cases
                              </div>
                            </dt>
                            <dd
                              class="ons-summary__values"
                            >
                              <span
                                class="ons-summary__text"
                                data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Completed-cases-value"
                              >
                                9
                              </span>
                            </dd>
                          </div>
                        </dl>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ons-table-scrollable ons-table-scrollable--on"
                  >
                    <div
                      aria-label="Table"
                      class="ons-table-scrollable__content"
                      role="region"
                      tabindex="0"
                    >
                      <table
                        class="ons-table"
                        data-testid="FRS2504A_EDIT-editor-table-table"
                        id="FRS2504A_EDIT-editor-table"
                      >
                        <thead
                          class="ons-table__head"
                        >
                          <tr
                            class="ons-table__row"
                          >
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Editor
                              </span>
                            </th>
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Allocated
                              </span>
                            </th>
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Completed
                              </span>
                            </th>
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Queried
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ons-table__body"
                        >
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-Editor"
                              class="ons-table__cell"
                            >
                              Doctor Doom
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                              class="ons-table__cell status"
                            >
                              10
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                              class="ons-table__cell "
                            >
                              5
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                              class="ons-table__cell "
                            >
                              0
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-Editor"
                              class="ons-table__cell"
                            >
                              Doctor Strange
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                              class="ons-table__cell status"
                            >
                              15
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                              class="ons-table__cell "
                            >
                              4
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                              class="ons-table__cell "
                            >
                              1
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-Editor"
                              class="ons-table__cell"
                            >
                              Doctor Who
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                              class="ons-table__cell status"
                            >
                              0
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                              class="ons-table__cell "
                            >
                              0
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                              class="ons-table__cell "
                            >
                              0
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              class="ons-table__cell"
                            >
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/allocate"
                              >
                                Allocate
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/reallocate"
                              >
                                Reallocate
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/search"
                              >
                                Search
                              </a>
                            </td>
                            <td
                              aria-label="1"
                              class="ons-table__cell"
                            />
                            <td
                              aria-label="2"
                              class="ons-table__cell"
                            />
                            <td
                              aria-label="3"
                              class="ons-table__cell"
                            />
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <br />
      <div
        data-testid="survey-accordion"
        id="survey"
      >
        <div
          class="ons-details ons-details--initialised ons-u-mt-l "
          data-save-state="true"
          id="survey-0"
          role="group"
        >
          <div
            aria-controls="survey-0-content"
            aria-expanded="false"
            class="ons-details__heading"
            data-ga-action="Open panel"
            data-testid="survey-0-heading"
            role="button"
            tabindex="0"
          >
            <h2
              class="ons-details__title ons-u-fs-r--b"
            >
              FRS
            </h2>
            <span
              class="ons-details__icon"
            >
              <svg
                aria-hidden="true"
                class="ons-icon"
                fill="currentColor"
                focusable="false"
                role="img"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </span>
          </div>
          <div
            aria-hidden="true"
            class="ons-details__content"
            data-testid="survey-0-content"
            id="survey-0-content"
          >
            <div
              class="ons-field"
            >
              <label
                class="ons-label"
                for="select-questionnaire"
              >
                Select questionnaire
              </label>
              <select
                class="ons-input ons-input--select"
                data-testid="select-questionnaire-input"
                id="select-questionnaire"
                name="select"
              >
                <option
                  disabled=""
                  value=""
                >
                  Select an option
                </option>
                <option
                  data-testid="select-questionnaire-option-FRS2504A_EDIT"
                  value="FRS2504A_EDIT"
                >
                  FRS2504A (April 2025)
                </option>
                <option
                  data-testid="select-questionnaire-option-FRS2505A_EDIT"
                  value="FRS2505A_EDIT"
                >
                  FRS2505A (May 2025)
                </option>
              </select>
            </div>
            <div
              class="questionnaire"
              data-testid="questionnaire"
            >
              <div
                class="questionnaire"
              >
                <div
                  data-testid="FRS2504A_EDIT-supervisor-Content"
                >
                  <div
                    class="ons-summary ons-u-mt-m ons-u-mb-m"
                    data-testid="FRS2504A_EDIT-supervisor-summary-summary"
                    id="FRS2504A_EDIT-supervisor-summary"
                  >
                    <div
                      class="ons-summary__group"
                    >
                      <h2
                        class="ons-summary__group-title"
                      >
                        Case status
                      </h2>
                      <dl
                        class="ons-summary__items"
                        id="FRS2504A_EDIT-supervisor-summary-Case-status-list"
                      >
                        <div
                          class="ons-summary__item"
                          data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Total-cases-row"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Total cases
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                              data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Total-cases-value"
                            >
                              1000
                            </span>
                          </dd>
                        </div>
                        <div
                          class="ons-summary__item"
                          data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Unallocated-cases-row"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Unallocated cases
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                              data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Unallocated-cases-value"
                            >
                              966
                            </span>
                          </dd>
                        </div>
                        <div
                          class="ons-summary__item"
                          data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Allocated-cases-row"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Allocated cases
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                              data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Allocated-cases-value"
                            >
                              25
                            </span>
                          </dd>
                        </div>
                        <div
                          class="ons-summary__item"
                          data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Completed-cases-row"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Completed cases
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                              data-testid="FRS2504A_EDIT-supervisor-summary-Case-status-Completed-cases-value"
                            >
                              9
                            </span>
                          </dd>
                        </div>
                      </dl>
                    </div>
                  </div>
                </div>
                <div
                  class="ons-table-scrollable ons-table-scrollable--on"
                >
                  <div
                    aria-label="Table"
                    class="ons-table-scrollable__content"
                    role="region"
                    tabindex="0"
                  >
                    <table
                      class="ons-table"
                      data-testid="FRS2504A_EDIT-editor-table-table"
                      id="FRS2504A_EDIT-editor-table"
                    >
                      <thead
                        class="ons-table__head"
                      >
                        <tr
                          class="ons-table__row"
                        >
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Editor
                            </span>
                          </th>
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Allocated
                            </span>
                          </th>
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Completed
                            </span>
                          </th>
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Queried
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ons-table__body"
                      >
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-Editor"
                            class="ons-table__cell"
                          >
                            Doctor Doom
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                            class="ons-table__cell status"
                          >
                            10
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                            class="ons-table__cell "
                          >
                            5
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                            class="ons-table__cell "
                          >
                            0
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-Editor"
                            class="ons-table__cell"
                          >
                            Doctor Strange
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                            class="ons-table__cell status"
                          >
                            15
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                            class="ons-table__cell "
                          >
                            4
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                            class="ons-table__cell "
                          >
                            1
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-Editor"
                            class="ons-table__cell"
                          >
                            Doctor Who
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesAllocated"
                            class="ons-table__cell status"
                          >
                            0
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesCompleted"
                            class="ons-table__cell "
                          >
                            0
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-NumberOfCasesQueried"
                            class="ons-table__cell "
                          >
                            0
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            class="ons-table__cell"
                          >
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/allocate"
                            >
                              Allocate
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/reallocate"
                            >
                              Reallocate
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/search"
                            >
                              Search
                            </a>
                          </td>
                          <td
                            aria-label="1"
                            class="ons-table__cell"
                          />
                          <td
                            aria-label="2"
                            class="ons-table__cell"
                          />
                          <td
                            aria-label="3"
                            class="ons-table__cell"
                          />
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available > should render the page correctly for the user when an error occurs > SupervisorPageError 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
          id="panel-_r_10_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Error:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <h4>
              Something went wrong
            </h4>
            <p
              data-testid="ErrorMessage"
            >
              try again in a few minutes
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_10_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          <h4>
            Something went wrong
          </h4>
          <p
            data-testid="ErrorMessage"
          >
            try again in a few minutes
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
